# every-python

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  integration.yml  latest-changes.yml  lint.yml  test.yml  typecheck.yml
every_python/: __init__.py  config.py  main.py  output.py  runner.py  utils.py
tests/: test_ccache.py  test_jobs.py  test_main.py  test_reference_clone.py  test_repos.py  test_utils.py
