[project]
name = "every-python"
dynamic = ["version"]
description = "Build and run any commit of CPython"
readme = "README.md"
authors = [
    { name = "Savannah Ostrowski", email = "savannah@python.org" }
]
license = { text = "MIT" }
requires-python = ">=3.14"
dependencies = [
    "typer>=0.20.0",
    "rich>=13.0.0",
]
keywords = ["ports", "processes", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/savannahostrowski/every-python"
Repository = "https://github.com/savannahostrowski/every-python"
Issues = "https://github.com/savannahostrowski/gruyere/issues"

[project.scripts]
every-python = "every_python.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "every_python/__init__.py"

[tool.hatchling.build.targets.wheel]
packages = ["every_python"]

[tool.hatchling.build.targets.sdist]
exclude = [
    "/.python-version",
    "/uv.lock",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pyright>=1.1.407",
    "ruff>=0.14.4",
]

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["I"]  # Enable isort rules for import sorting

[tool.pyright]
include = ["every_python"]
typeCheckingMode = "strict"
pythonVersion = "3.14"